[gd_scene load_steps=5 format=3 uid="uid://cs4y516rwuuxm"]

[ext_resource type="Texture2D" uid="uid://45dwbyxmy4wd" path="res://assets/sprites/Projectiles/Projectile_2.png" id="1_4u32m"]
[ext_resource type="Script" uid="uid://1soxcbowsco2" path="res://scenes/projectiles/projectile.gd" id="1_71gtn"]
[ext_resource type="Script" uid="uid://cyj3i1371tt7i" path="res://scenes/components/hitbox_component.gd" id="1_u4710"]

[sub_resource type="CircleShape2D" id="CircleShape2D_71gtn"]
radius = 13.601471

[node name="ProjectilePistol" type="Node2D" node_paths=PackedStringArray("hitbox")]
script = ExtResource("1_71gtn")
hitbox = NodePath("HitboxComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_4u32m")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
script = ExtResource("1_u4710")
metadata/_custom_type_script = "uid://cyj3i1371tt7i"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_71gtn")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="HitboxComponent" to="HitboxComponent" method="_on_area_entered"]
[connection signal="on_hit_hurtbox" from="HitboxComponent" to="." method="_on_hitbox_component_on_hit_hurtbox"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
