[gd_scene load_steps=12 format=3 uid="uid://r0yv7tny8sc8"]

[ext_resource type="PackedScene" uid="uid://cyavyrbpj6jjb" path="res://scenes/unit/unit.tscn" id="1_xa7el"]
[ext_resource type="Script" uid="uid://bixfa3sidiiko" path="res://scenes/unit/players/player_herder.gd" id="2_ak6fa"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="3_ht2l1"]
[ext_resource type="Resource" uid="uid://dlsijaffps5qh" path="res://resouce/unit/players/stats_player_herder.tres" id="3_viu20"]
[ext_resource type="Script" uid="uid://c0mirjaxbhe0q" path="res://scenes/unit/players/trail.gd" id="5_ht2l1"]
[ext_resource type="Script" uid="uid://3xhc8o3yr61w" path="res://scenes/unit/players/weapon_container.gd" id="6_viu20"]
[ext_resource type="Script" uid="uid://cyj3i1371tt7i" path="res://scenes/components/hitbox_component.gd" id="7_20xkg"]

[sub_resource type="Curve" id="Curve_0kki1"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_g8n7m"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_20xkg"]
radius = 32.01562

[sub_resource type="CircleShape2D" id="CircleShape2D_45lct"]
radius = 30.016663

[node name="PlayerHerder" instance=ExtResource("1_xa7el")]
collision_layer = 1
collision_mask = 6
script = ExtResource("2_ak6fa")
player_id = "herder"
fixed_dash_distance = 300.0
dash_speed = 1000.0
close_threshold = 60.0
dash_base_damage = 10
dash_knockback = 2.0
geometry_mask_color = Color(1, 0, 0, 0.6)
explosion_radius = 200.0
cost_per_segment = 20.0
cost_explosion = 20.0
explosion_vfx_scene = null
max_energy = 999.0
energy_regen = 0.5
max_armor = 3
base_speed = 300.0
dash_vfx_scene = null
stats = ExtResource("3_viu20")

[node name="Trail" type="Line2D" parent="Visuals" index="0" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
top_level = true
position = Vector2(0, -29)
width = 50.0
width_curve = SubResource("Curve_0kki1")
script = ExtResource("5_ht2l1")
player = NodePath("../..")

[node name="Shadow" parent="Visuals" index="1"]
z_index = 1

[node name="Sprite" parent="Visuals" index="2"]
z_index = 1
texture = ExtResource("3_ht2l1")

[node name="CollisionShape2D" parent="." index="1"]
z_index = 1
position = Vector2(1, -35)
shape = SubResource("CircleShape2D_g8n7m")

[node name="WeaponContainer" type="Node2D" parent="." index="3"]
script = ExtResource("6_viu20")

[node name="One" type="Node2D" parent="WeaponContainer" index="0"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/One" index="0"]
position = Vector2(0, -15)

[node name="Two" type="Node2D" parent="WeaponContainer" index="1"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Two" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Two" index="1"]
position = Vector2(-40, 20)

[node name="Three" type="Node2D" parent="WeaponContainer" index="2"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Three" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Three" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Three" index="2"]
position = Vector2(0, -115)

[node name="Four" type="Node2D" parent="WeaponContainer" index="3"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Four" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Four" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Four" index="2"]
position = Vector2(40, -115)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Four" index="3"]
position = Vector2(-40, -115)

[node name="Five" type="Node2D" parent="WeaponContainer" index="4"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Five" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Five" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Five" index="2"]
position = Vector2(60, -40)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Five" index="3"]
position = Vector2(-60, -40)

[node name="Marker2D5" type="Marker2D" parent="WeaponContainer/Five" index="4"]
position = Vector2(0, -115)

[node name="Six" type="Node2D" parent="WeaponContainer" index="5"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Six" index="0"]
position = Vector2(35, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Six" index="1"]
position = Vector2(-35, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Six" index="2"]
position = Vector2(35, -115)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Six" index="3"]
position = Vector2(-35, -115)

[node name="Marker2D5" type="Marker2D" parent="WeaponContainer/Six" index="4"]
position = Vector2(60, -45)

[node name="Marker2D6" type="Marker2D" parent="WeaponContainer/Six" index="5"]
position = Vector2(-60, -45)

[node name="DashTimer" type="Timer" parent="." index="4"]

[node name="DashCooldwnTimer" type="Timer" parent="." index="5"]

[node name="TrailTimer" type="Timer" parent="." index="6"]
unique_name_in_owner = true
one_shot = true

[node name="HurtboxComponent" parent="." index="7"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
z_index = 1
position = Vector2(0, -36)
shape = SubResource("CircleShape2D_20xkg")

[node name="HealthBar" parent="." index="9"]
back_color = Color(0.13725491, 0.019607844, 0.02745098, 1)
fill_color = Color(1, 0.2901961, 0.45490196, 1)

[node name="Line2D" type="Line2D" parent="." index="11"]

[node name="GhostsContainer" type="Node2D" parent="." index="12"]

[node name="DashHitbox" type="Area2D" parent="." index="13"]
collision_layer = 16
collision_mask = 8
script = ExtResource("7_20xkg")
metadata/_custom_type_script = "uid://cyj3i1371tt7i"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHitbox" index="0"]
position = Vector2(0, -34)
shape = SubResource("CircleShape2D_45lct")
debug_color = Color(0.7804564, 0.43616673, 0.075355105, 0.41960785)

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="TrailTimer" to="Visuals/Trail" method="_on_trail_timer_timeout"]
